--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "procedural-gl": "^1.0.6",
     "vue": "^2.6.11",
     "vue-moveable": "^1.8.9",
     "vue-router": "^3.2.0",
