--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "procedural-gl": "^1.0.6",
